font-color change in highlight

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -240,4 +240,5 @@ main .section {
 /* section metadata */
 main .section.highlight {
   background-color: var(--highlight-background-color);
+  color: #000C6E;
 }
