--- a/blocks/ida-hero/ida-hero.css
+++ b/blocks/ida-hero/ida-hero.css
@@ -4,9 +4,12 @@
   max-width: 100%;
   margin: 0;
   padding: 0;
+  position: relative;
+}
+
+.ida-hero-container {
   background: #d5edf5;
   color: #000C6E;
-  position: relative;
 }
 
 .ida-hero.block {
